2003-11-12  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * FormController.py: Fixed bug in addFormValidators (thanks alienoid)

   * Added code to report file in which metadata errors occur.

2003-10-29  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Fixed code that tests for existence of validators and objects being 
     traversed to.  You'll get a helpful ValueError now instead of a cryptic
     Unauthorized exception when things aren't found.

   * Dump the full file name to the log when a .metadata file's [actions] or
     [validators] sections can't be read properly.

   * Fixed the version number.  D'oh.

2003-10-25  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Fixed validation for scripts so that it will work when scripts are called
     programmatically and/or from unit tests (e.g. without a REQUEST)

   * Added missing initial self.validators and self.actions to 
     ControllerPythonScripts

2003-10-24  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Modified the getError/setError methods in FormControllerState to be more
     tolerant of non-i18ned error messages.

   * Updated info about CMF 1.3 installation thanks to more info from Laurent
     Mallet (Ellis).

   * Documented CallProfiler patch (thanks to Andy McKay = andym)

   * Added patch to make debugging work properly in Wing IDE (may require
     patches to CMFCore, too).  Thanks to Stephan Deibel.

2003-10-23  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Laurent Mallet informs me that to make CMFFormController work with CMF 1.3.x,
     you need to copy FSPythonScript from CMF 1.4.x's CMFCore directory to
     CMF 1.3.x's CMFCore directlry.  Updated README.txt

2003-10-21  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Added better error handling for validation.  Make sure validators are
     really CMFFormController validators (weird things happen if not), make sure
     validators can be found.

2003-10-20  Geoff Davis <geoff@geoffdavis.net> (plonista)
