@@ -1,3 +1,8 @@
+2003-12-02  Geoff Davis <geoff@geoffdavis.net> (plonista)
+
+   * Strip acquisition layers from actions and validators before doing
+     ZODB clone
+
 2003-11-12  Geoff Davis <geoff@geoffdavis.net> (plonista)
 
    * FormController.py: Fixed bug in addFormValidators (thanks alienoid)
